[gd_scene load_steps=56 format=3 uid="uid://dljgjkh5kwxls"]

[ext_resource type="Texture2D" uid="uid://dcethsxrejs6m" path="res://art/inventory_art/Picsart_24-04-25_18-30-59-911.png" id="1_2bhjg"]
[ext_resource type="Script" path="res://scene/dashboard.gd" id="1_lxfag"]
[ext_resource type="Texture2D" uid="uid://csd78qdwq23lm" path="res://art/ingredients/ingredient (2).png" id="2_lp7no"]
[ext_resource type="Texture2D" uid="uid://dpl4uvs22wio6" path="res://art/Additionals/arrow.png" id="2_q8w2u"]
[ext_resource type="Texture2D" uid="uid://cpwsw5f5583gv" path="res://art/ingredients/ingredient (9).png" id="3_ao3rl"]
[ext_resource type="Texture2D" uid="uid://bpr7juttfs6q2" path="res://art/Additionals/right-arrow.png" id="3_os8fq"]
[ext_resource type="Texture2D" uid="uid://c1e4uhrwwrioc" path="res://art/ingredients/ingredient (10).png" id="4_1tlvq"]
[ext_resource type="Texture2D" uid="uid://cdckb0rq7hku8" path="res://art/ingredients/ingredient (12).png" id="5_5u8eh"]
[ext_resource type="Texture2D" uid="uid://dve62hy7grlnj" path="res://art/ingredients/ingredient (14).png" id="6_pubjd"]
[ext_resource type="Texture2D" uid="uid://baxjp1vadee2o" path="res://art/Additionals/Picsart_24-04-27_09-01-57-243 (1).jpg" id="7_41n3u"]
[ext_resource type="Texture2D" uid="uid://knxjyd0q0ft5" path="res://art/ingredients/ingredient (8).png" id="7_f7swr"]
[ext_resource type="Texture2D" uid="uid://b77rscx133657" path="res://art/ingredients/ingredient (6).png" id="8_216y8"]
[ext_resource type="Texture2D" uid="uid://1c24e4skxwod" path="res://art/Additionals/Picsart_24-04-27_09-02-31-347 (1).jpg" id="8_pcxuu"]
[ext_resource type="Texture2D" uid="uid://qe8swupkvmmm" path="res://art/ingredients/ingredient (7).png" id="9_16u12"]
[ext_resource type="Texture2D" uid="uid://b05vs3eoesr3e" path="res://art/ingredients/ingredient (3).png" id="10_dkgly"]
[ext_resource type="Texture2D" uid="uid://bdi2va4a372vb" path="res://art/ingredients/ingredient (17).png" id="11_i0e0g"]
[ext_resource type="Texture2D" uid="uid://qnd61ks5h0vf" path="res://art/Additionals/images_-_2024-04-27T085758.391-removebg-preview.png" id="12_gk3hm"]
[ext_resource type="Texture2D" uid="uid://bguaet5wbhdmc" path="res://art/ingredients/ingredient (5).png" id="12_yu003"]
[ext_resource type="Texture2D" uid="uid://bh7776denjs35" path="res://art/ingredients/ingredient (11).png" id="13_v54ra"]
[ext_resource type="Texture2D" uid="uid://dl1oca0ll5ac" path="res://art/ingredients/ingredient (18).png" id="14_atyk4"]
[ext_resource type="Texture2D" uid="uid://bvvgejprxif46" path="res://art/ingredients/ingredient (13).png" id="15_fuqlv"]
[ext_resource type="Texture2D" uid="uid://5dumoqbqpbkb" path="res://art/ingredients/ingredient (16).png" id="16_kijly"]
[ext_resource type="Texture2D" uid="uid://d0si3awi858cb" path="res://art/ingredients/ingredient (15).png" id="17_4a1ig"]
[ext_resource type="Texture2D" uid="uid://b63i2bnmwl6in" path="res://art/ingredients/ingredient (4).png" id="18_71jlv"]
[ext_resource type="Texture2D" uid="uid://c8s8r8s6ynx0j" path="res://art/Additionals/Picsart_24-04-27_09-02-14-985.jpg" id="21_7kcc7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_63hqy"]
atlas = ExtResource("1_2bhjg")
region = Rect2(270, 0, 27, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcn1x"]
atlas = ExtResource("1_2bhjg")
region = Rect2(297, 0, 27, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j3fd"]
atlas = ExtResource("1_2bhjg")
region = Rect2(324, 0, 27, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6fl7"]
atlas = ExtResource("1_2bhjg")
region = Rect2(351, 0, 27, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ld6n"]
atlas = ExtResource("1_2bhjg")
region = Rect2(378, 0, 27, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q4go"]
atlas = ExtResource("1_2bhjg")
region = Rect2(405, 0, 27, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1q8y"]
atlas = ExtResource("1_2bhjg")
region = Rect2(432, 0, 27, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_vf6i3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63hqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcn1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j3fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6fl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ld6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q4go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1q8y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xikwk"]
atlas = ExtResource("2_lp7no")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ousv4"]
atlas = ExtResource("14_atyk4")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aiax"]
atlas = ExtResource("7_41n3u")
region = Rect2(0, 0, 89, 89)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0n3w"]
atlas = ExtResource("8_pcxuu")
region = Rect2(0, 0, 38, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17x8"]
atlas = ExtResource("15_fuqlv")
region = Rect2(0, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_hplc8"]
atlas = ExtResource("12_yu003")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdu8e"]
atlas = ExtResource("13_v54ra")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_52mv6"]
atlas = ExtResource("12_gk3hm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ebcy"]
atlas = ExtResource("18_71jlv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_td8g2"]
atlas = ExtResource("16_kijly")
region = Rect2(0, 0, 16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilphm"]
atlas = ExtResource("6_pubjd")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpccv"]
atlas = ExtResource("3_ao3rl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw43y"]
atlas = ExtResource("11_i0e0g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6stpa"]
atlas = ExtResource("9_16u12")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7y6o"]
atlas = ExtResource("17_4a1ig")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3x6v"]
atlas = ExtResource("4_1tlvq")
region = Rect2(0, 0, 16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jnum"]
atlas = ExtResource("21_7kcc7")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yalb1"]
atlas = ExtResource("8_216y8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbw4n"]
atlas = ExtResource("10_dkgly")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lruyr"]
atlas = ExtResource("7_f7swr")
region = Rect2(0, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3j88"]
atlas = ExtResource("5_5u8eh")
region = Rect2(0, 0, 16, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_70c7h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xikwk")
}],
"loop": true,
"name": &"Nori",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ousv4")
}],
"loop": true,
"name": &"avocado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aiax")
}],
"loop": true,
"name": &"bakeblast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0n3w")
}],
"loop": true,
"name": &"bladefury",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17x8")
}],
"loop": true,
"name": &"carrot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hplc8")
}],
"loop": true,
"name": &"crabmeat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdu8e")
}],
"loop": true,
"name": &"cucumber",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52mv6")
}],
"loop": true,
"name": &"deadlying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ebcy")
}],
"loop": true,
"name": &"mirin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td8g2")
}],
"loop": true,
"name": &"onion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilphm")
}],
"loop": true,
"name": &"pickledginger",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpccv")
}],
"loop": true,
"name": &"rice",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw43y")
}],
"loop": true,
"name": &"salmon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6stpa")
}],
"loop": true,
"name": &"salt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7y6o")
}],
"loop": true,
"name": &"seed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3x6v")
}],
"loop": true,
"name": &"soysauce",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jnum")
}],
"loop": true,
"name": &"spicefall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yalb1")
}],
"loop": true,
"name": &"sugar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbw4n")
}],
"loop": true,
"name": &"tuna",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lruyr")
}],
"loop": true,
"name": &"vinegar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3j88")
}],
"loop": true,
"name": &"wasabi",
"speed": 5.0
}]

[node name="dashboard" type="StaticBody2D"]
script = ExtResource("1_lxfag")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 82.0
offset_bottom = 60.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(11, 14)
scale = Vector2(0.749689, 0.352991)
sprite_frames = SubResource("SpriteFrames_vf6i3")
frame_progress = 0.605493

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 24.0
offset_top = -1.0
offset_right = 151.0
offset_bottom = 26.0
scale = Vector2(0.4, 0.4)
text = "Inventory"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 18.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 35.0
scale = Vector2(0.4, 0.4)
text = "Coins: 
"

[node name="AmtOfCoins" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 44.0
offset_top = 9.0
offset_right = 106.0
offset_bottom = 36.0
scale = Vector2(0.4, 0.4)
text = "00
"

[node name="ItemName" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 37.0
offset_top = 17.0
offset_right = 204.0
offset_bottom = 44.0
scale = Vector2(0.4, 0.4)
text = "-----"

[node name="Button2" type="Button" parent="."]
offset_top = 44.0
offset_right = 76.0
offset_bottom = 75.0
scale = Vector2(0.5, 0.5)
text = "Left"
icon = ExtResource("2_q8w2u")

[node name="Button3" type="Button" parent="."]
offset_left = 44.0
offset_top = 44.0
offset_right = 120.0
offset_bottom = 75.0
scale = Vector2(0.5, 0.5)
text = "Right"
icon = ExtResource("3_os8fq")
alignment = 2
icon_alignment = 2

[node name="ItemAmount" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 37.0
offset_top = 27.0
offset_right = 147.0
offset_bottom = 54.0
scale = Vector2(0.4, 0.4)
text = "00"

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2(17.3425, 33.0963)
scale = Vector2(0.403026, 0.354036)
sprite_frames = SubResource("SpriteFrames_70c7h")
animation = &"deadlying"

[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
